# ChangeLog for dev-ruby/yard
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/yard/ChangeLog,v 1.74 2014/04/12 23:37:53 mrueg Exp $

  12 Apr 2014; Manuel Rüger <mrueg@gentoo.org> yard-0.8.7.2.ebuild,
  yard-0.8.7.3.ebuild:
  Remove ruby18 target.

*yard-0.8.7.3-r1 (01 Apr 2014)

  01 Apr 2014; Hans de Graaff <graaff@gentoo.org> +yard-0.8.7.3-r1.ebuild:
  Add ruby21.

  29 Jan 2014; Akinori Hattori <hattya@gentoo.org> yard-0.8.7.3.ebuild:
  keyword ~ia64 wrt bug #465948

  18 Jan 2014; Manuel Rüger <mrueg@gentoo.org> -yard-0.8.3.ebuild:
  Cleanup old.

  18 Jan 2014; Agostino Sarubbo <ago@gentoo.org> yard-0.8.7.2.ebuild:
  Stable for alpha, wrt bug #488914

  05 Jan 2014; Agostino Sarubbo <ago@gentoo.org> yard-0.8.7.2.ebuild:
  Stable for x86, wrt bug #488914

  27 Dec 2013; Akinori Hattori <hattya@gentoo.org> yard-0.8.7.2.ebuild:
  ia64 stable wrt bug #488914

  26 Dec 2013; Markus Meier <maekke@gentoo.org> yard-0.8.7.2.ebuild:
  arm stable, bug #493780

  23 Dec 2013; Pacho Ramos <pacho@gentoo.org> yard-0.8.7.2.ebuild:
  amd64 stable, bug #488914

  23 Dec 2013; Agostino Sarubbo <ago@gentoo.org> yard-0.8.7.2.ebuild:
  Stable for sparc, wrt bug #488914

  23 Dec 2013; Agostino Sarubbo <ago@gentoo.org> yard-0.8.7.2.ebuild:
  Stable for ppc, wrt bug #488914

  22 Dec 2013; Manuel Rüger <mrueg@gentoo.org> -yard-0.8.7.2-r1.ebuild:
  Cleanup old.

  22 Dec 2013; Anthony G. Basile <blueness@gentoo.org> yard-0.8.7.3.ebuild:
  Keyword ~ppc64, bug #465948

  22 Dec 2013; Agostino Sarubbo <ago@gentoo.org> yard-0.8.7.2.ebuild:
  Stable for ppc64, wrt bug #488914

*yard-0.8.7.3 (03 Nov 2013)

  03 Nov 2013; Manuel Rüger <mrueg@gentoo.org> +yard-0.8.7.3.ebuild:
  Version bump.

  24 Oct 2013; Jeroen Roovers <jer@gentoo.org> yard-0.8.7.2.ebuild:
  Stable for HPPA (bug #488914).

  21 Oct 2013; Hans de Graaff <graaff@gentoo.org> -yard-0.8.7.ebuild,
  -yard-0.8.7.1.ebuild:
  Cleanup.

*yard-0.8.7.2-r1 (20 Oct 2013)