@@ -1,8 +1,20 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX yard-0.8.2.1-test-failures.patch 860 SHA256 4c4f1bb5d41c41927d7c805f28d15dd41f6307f5efd79512c0f32483d567074f SHA512 fbbe55ebf327e9bff95bc9ef01c4fe5975278bf3bd21d334b1d5dd9d534e6d61866dd7b184d04751cdf6ff776f4a8ce40be4b9ebfad51f3f10f3eed138b5e58f WHIRLPOOL 37dd5502c7c183564b68d1a9acb863be10e70ef99716a93102c9284866ae70418f958fd34ee259f82e98d03e78c35756e6250e0e2d8712a22f11f946974ce78b
 DIST yard-0.8.7.2-git.tgz 854200 SHA256 90905223f0b3308c36c5a5387d1d36588e85bd804d700b7e20c5305fe37936df SHA512 107d9f354eddb71fdefb0664199c7f66053028e57056e32d87b38a5946bad47ad3a607f9fe7f6b672ab625880205c335df88325a2f0ab676da5d96ffe9539be7 WHIRLPOOL 355ae08966dd95aef16af80323321a5f754ceced3fe79056f674c3f5263b02bca7037e16a5f0555e656e63d907b7a82419954a917fb73019c29884e491feddaa
 DIST yard-0.8.7.3-git.tgz 854557 SHA256 d606b5780c8cbe4b4508c34a354f04a5d17609bc0cc07f272c37328e2fca0288 SHA512 96b8a128bacd005e64c3a863ac6cc7377755397c7532b5541809c8a0f5b157cd7433644887823e2d3c4435a0bded59fc2785992fdcf5ebcbf616a4ffd912f6fa WHIRLPOOL 80753671669489b2d6082029ba2b3c24c2aa57e0cdc9a5647e041c60c76f63cb51c33534aab70fb58f26b1ed5fde30a0433dd7f2ef00588273d3c71d1fb799a0
+DIST yard-0.8.7.4-git.tgz 855986 SHA256 17be618732165387178dd372fa2326a4065ba6d0c38c28daa05bdeffb38427a3 SHA512 288d29119c990db125ab1b6817556a70f01e5ab6c5cfeed9bedfbdd1bcdf3c4d779a1886ee0845072dfe337df5e6de73187a0897ac24cd28cdf4cd695afab123 WHIRLPOOL c8b8327210d0ccbd3e571a4ee9e18ec61cf1397ba92c12bcb7d59b454bda4dc3ec0791a12dc907f943fcf3e38df6b94991308097afc03147f0acd2fe46f2771d
 EBUILD yard-0.8.7.2.ebuild 1204 SHA256 31bb2df01e1afc2684e8bdf1bf757a6bb1afbce6bdd8968e65611b575e283974 SHA512 969181e30d5e25e810d62e5e915e233e57764ec9076d914544719acdcd6ed98709934b06352e2fb6d3e51c2fe08096085f17df40d59bce894b31887b5ccef0f1 WHIRLPOOL fbf07a6b3a7660e4fc6e4596188320b632410bb01d5ecb65d13d832659ac775ab5240c497d91b6cb6d40caef74b8e786b1477d2aceaaf0f76e6e5103f27253ad
 EBUILD yard-0.8.7.3-r1.ebuild 1286 SHA256 84bad6c51f1c91afa6bdad6887d99b5824cd2c00deb2b0130d67df21b83e595b SHA512 60adbf98069337342d9a1963ef5c3d9503e42e6ac5b94befea06835474ac11ffaeb6dbe63554f4bee586e3584e1d4aeb40cb3f7bea0d64fcae88178a9c49f8cd WHIRLPOOL 060337f855806ea0add0073602ec140cf73ac6eecd877445149e87ea662ee51362b39520a892efce923158fb8af5fab24a226d8171759d63dbfd28242299b490
 EBUILD yard-0.8.7.3.ebuild 1275 SHA256 8a048d72ea4043e92e401336d9c827477aba2e89c92ec922ae82dda37cbaed4d SHA512 43c3da35fcf0e16882a62ab683613dfcc8fa5ab9e265708ff3eb5fe05b780bc3f5b1891a0f48267f7583b8b78fd3d4f1c2bdfa998e74d596d397424720fff40e WHIRLPOOL cafd4a07ac64172c7ce44c785d083d7858cf4f3255a8c3d5bff2af4381442f655b9c1379a4766e629a1e4653c6b43f3d62dd35ecb0995264285c326d31e9a258
-MISC ChangeLog 9246 SHA256 b4d1a69ba0c074b15103a5717c230cd71575a750f361fe4a839dd62ba569ad34 SHA512 d5d47a5a91d0e6ce7ed2d256925dfe43bbaa6a6f9b31f38b52fd783a458e94f0136afe9a37e60e2e494d0b2bc7dc9212410b16f419030753917ed4f71afaf3cf WHIRLPOOL 13f85424184c4a818c91cad57314ad6b14fa694b2dafb2f5b08439e4e32afb45f9d86a6c7200a81de303665725727c5945a38ffc966b17750e17bcaa45815475
+EBUILD yard-0.8.7.4.ebuild 1284 SHA256 a14011d2dd01b5679c98dad812f196f7bdb52b44893d33c509ebd2c7e39dfcf3 SHA512 36834bfdbb11b1ccb62b09608567ea9ba6ed682f9412dc7d7855bcc3b937ec32f0065a01585b58350904ad9f667b9d4c48ffa4cbcc0a197b386ab46aabfa6869 WHIRLPOOL 463b128eca31b6b4c4c1fea01e9e69b603951870a62b24a478dbedb989c71f46d206bc4b926bf95bca891d69c26666458dc284444a58f7e3c0bca46588869406
+MISC ChangeLog 9365 SHA256 d9a069b56eaf755a0bf8c16868cd1cd3d9e033facfebad34846f05e782211ebe SHA512 ca5742406fdd58055f7fa5da9b99ab2af0e91f45df6bf74888e55b5632aafe589c76e45969bd844055a700a7d5c81e36e58c5159e4a3f841441d9ac4b747ba0e WHIRLPOOL 2552458a1d65db0318aa26c9cdfc84f98a0d996cb59ffe7858cd1cd1718dc515701cd742d1a27c5641a84a837287e3460254a1681b3a04d35293298b3ae5f58f
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iF4EAREIAAYFAlN8RlwACgkQiIP6VqMIqNcNBgD/VPYdmu9xbolP8OGAiGx0Rw6A
+y8TYqIurOSAXZW4O9YsA/0bOiMMM1XYGsdSZZlTDi6jq2fW/dfMcwUZaBUFwG4Pd
+=Gtsl
+-----END PGP SIGNATURE-----
